Support creating libsvm dataset

--- a/R-package/NAMESPACE
+++ b/R-package/NAMESPACE
@@ -36,6 +36,7 @@ export(make_iterator_from_string_handle)
 export(make_iterator_from_structure)
 export(make_iterator_initializable)
 export(make_iterator_one_shot)
+export(make_libsvm_dataset)
 export(next_batch)
 export(out_of_range_handler)
 export(output_types)
